--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,4 +57,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest tests/
+        pytest tests/numbers_to_dec.py
+        pytest tests/test_numbers_to_dec.py
